[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/mail/Autopsy.gd" type="Script" id=1]

[node name="Autopsy" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 600, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 600.0
margin_bottom = 14.0
text = "Autopsy Results"
align = 1

[node name="Num" type="Label" parent="."]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 32.0
text = "No. "

[node name="Hospital" type="Label" parent="."]
margin_top = 36.0
margin_right = 600.0
margin_bottom = 50.0
text = "From "

[node name="Name" type="Label" parent="."]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 68.0
text = "Name: "

[node name="PoliceStation" type="Label" parent="."]
margin_top = 72.0
margin_right = 600.0
margin_bottom = 86.0
text = "Send to: "

[node name="DateTime" type="Label" parent="."]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 104.0
text = "Date/Time: "

[node name="Subtitle1" type="Label" parent="."]
margin_top = 108.0
margin_right = 600.0
margin_bottom = 122.0
text = "Results"
align = 1

[node name="Observe" type="VBoxContainer" parent="."]
margin_top = 126.0
margin_right = 600.0
margin_bottom = 140.0

[node name="Title" type="Label" parent="Observe"]
margin_right = 600.0
margin_bottom = 14.0
text = "Detected item"

[node name="LabTest" type="VBoxContainer" parent="."]
margin_top = 144.0
margin_right = 600.0
margin_bottom = 158.0

[node name="Title" type="Label" parent="LabTest"]
margin_right = 600.0
margin_bottom = 14.0
text = "Laboratory examination"

[node name="Opinion" type="VBoxContainer" parent="."]
margin_top = 162.0
margin_right = 600.0
margin_bottom = 176.0

[node name="Title" type="Label" parent="Opinion"]
margin_right = 600.0
margin_bottom = 14.0
text = "The opinion of the medical examiner"
